<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ExTcpServer</class>
 <widget class="QMainWindow" name="ExTcpServer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>821</width>
    <height>435</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>ExTcpServer</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="labIP">
        <property name="text">
         <string>IP address</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="comboBox">
        <property name="editable">
         <bool>true</bool>
        </property>
        <property name="currentText">
         <string>127.0.0.1</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="labPort">
        <property name="text">
         <string>Port</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QSpinBox" name="spinBox">
        <property name="maximum">
         <number>65000</number>
        </property>
        <property name="value">
         <number>10000</number>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QPlainTextEdit" name="plainTextEdit"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLineEdit" name="lineEdit"/>
      </item>
      <item>
       <widget class="QPushButton" name="btnSend">
        <property name="text">
         <string>Send</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>821</width>
     <height>20</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonFollowStyle</enum>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actStart"/>
   <addaction name="actStop"/>
   <addaction name="actClear"/>
   <addaction name="actQuit"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actStart">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/Icons/Image6.png</normaloff>:/Icons/Image6.png</iconset>
   </property>
   <property name="text">
    <string>actStart</string>
   </property>
   <property name="toolTip">
    <string>actStart</string>
   </property>
  </action>
  <action name="actStop">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/Icons/Image3.png</normaloff>:/Icons/Image3.png</iconset>
   </property>
   <property name="text">
    <string>actStop</string>
   </property>
   <property name="toolTip">
    <string>actStop</string>
   </property>
  </action>
  <action name="actClear">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/Icons/Image1.png</normaloff>:/Icons/Image1.png</iconset>
   </property>
   <property name="text">
    <string>actClear</string>
   </property>
   <property name="toolTip">
    <string>actClear</string>
   </property>
  </action>
  <action name="actQuit">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/Icons/Image2.jpg</normaloff>:/Icons/Image2.jpg</iconset>
   </property>
   <property name="text">
    <string>actQuit</string>
   </property>
   <property name="toolTip">
    <string>actQuit</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="resources.qrc"/>
 </resources>
 <connections/>
</ui>
